config: eslint archive base

--- a/.eslintrc
+++ b/.eslintrc
@@ -46,7 +46,7 @@
         "clsx",
         "ctl"
       ],
-      "config": "tailwind.config.js", // returned from `loadConfig()` utility if not provided
+      "config": "tailwind.config.ts", // returned from `loadConfig()` utility if not provided
       "cssFiles": [
         "**/*.css",
         "!**/node_modules",
